using data binding instead of view binding

--- a/app/src/main/res/layout-land/fragment_home.xml
+++ b/app/src/main/res/layout-land/fragment_home.xml
@@ -1,98 +1,103 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".view.HomeFragment">
+    xmlns:tools="http://schemas.android.com/tools">
 
+        <data>
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+        </data>
+
+        <androidx.coordinatorlayout.widget.CoordinatorLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            tools:context=".view.HomeFragment">
 
 
-
-                <com.google.android.material.textfield.TextInputLayout
-                    android:id="@+id/search_edtField_home"
+                <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="18dp"
-                    android:layout_marginEnd="18dp"
-                    android:layout_marginTop="15dp"
-                    app:startIconDrawable="@drawable/ic_baseline_search_24"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+                    android:layout_height="match_parent">
 
-                        <com.google.android.material.textfield.TextInputEditText
-                            android:id="@+id/search_edt_home"
+
+                        <com.google.android.material.textfield.TextInputLayout
+                            android:id="@+id/search_edtField_home"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            />
+                            android:layout_marginStart="18dp"
+                            android:layout_marginEnd="18dp"
+                            android:layout_marginTop="15dp"
+                            app:startIconDrawable="@drawable/ic_baseline_search_24"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toTopOf="parent"
+                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
 
-                </com.google.android.material.textfield.TextInputLayout>
+                                <com.google.android.material.textfield.TextInputEditText
+                                    android:id="@+id/search_edt_home"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content" />
 
-                <TextView
-                    android:id="@+id/txv_count_text"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginEnd="18dp"
-                    android:text="@string/count"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/search_edtField_home" />
+                        </com.google.android.material.textfield.TextInputLayout>
 
-                <TextView
-                    android:id="@+id/txv_count"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginEnd="10dp"
-                    android:text="@string/_0"
-                    app:layout_constraintBottom_toBottomOf="@+id/txv_count_text"
-                    app:layout_constraintEnd_toStartOf="@id/txv_count_text"
-                    app:layout_constraintTop_toTopOf="@+id/txv_count_text" />
+                        <TextView
+                            android:id="@+id/txv_count_text"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="10dp"
+                            android:layout_marginEnd="18dp"
+                            android:text="@string/count"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintTop_toBottomOf="@id/search_edtField_home" />
 
-                <View
-                    android:id="@+id/view"
-                    android:layout_width="match_parent"
-                    android:layout_height="1dp"
-                    android:layout_marginStart="18dp"
-                    android:alpha="0.1"
-                    android:background="@color/black"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/txv_count_text" />
+                        <TextView
+                            android:id="@+id/txv_count"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginEnd="10dp"
+                            android:text="@string/_0"
+                            app:layout_constraintBottom_toBottomOf="@+id/txv_count_text"
+                            app:layout_constraintEnd_toStartOf="@id/txv_count_text"
+                            app:layout_constraintTop_toTopOf="@+id/txv_count_text" />
 
-                <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/recycler_word"
-                    android:layout_width="0dp"
-                    android:layout_height="0dp"
-                    android:layout_marginStart="18dp"
-                    android:layout_marginTop="30dp"
-                    android:layout_marginEnd="18dp"
-                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
-                    app:spanCount="2"
-                    app:layout_constraintBottom_toTopOf="@+id/fab_add_word"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/txv_count_text"
-                    app:layout_constraintVertical_bias="0.120000005" />
+                        <View
+                            android:id="@+id/view"
+                            android:layout_width="match_parent"
+                            android:layout_height="1dp"
+                            android:layout_marginStart="18dp"
+                            android:alpha="0.1"
+                            android:background="@color/black"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toBottomOf="@id/txv_count_text" />
 
-
-                <com.google.android.material.floatingactionbutton.FloatingActionButton
-                    android:id="@+id/fab_add_word"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="16dp"
-                    android:layout_marginTop="30dp"
-                    android:layout_marginBottom="16dp"
-                    android:contentDescription="@string/detail"
-                    android:src="@drawable/add"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintStart_toStartOf="parent" />
+                        <androidx.recyclerview.widget.RecyclerView
+                            android:id="@+id/recycler_word"
+                            android:layout_width="0dp"
+                            android:layout_height="0dp"
+                            android:layout_marginStart="18dp"
+                            android:layout_marginTop="30dp"
+                            android:layout_marginEnd="18dp"
+                            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+                            app:spanCount="2"
+                            app:layout_constraintBottom_toTopOf="@+id/fab_add_word"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toBottomOf="@id/txv_count_text"
+                            app:layout_constraintVertical_bias="0.120000005" />
 
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
+                        <com.google.android.material.floatingactionbutton.FloatingActionButton
+                            android:id="@+id/fab_add_word"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="16dp"
+                            android:layout_marginTop="30dp"
+                            android:layout_marginBottom="16dp"
+                            android:contentDescription="@string/detail"
+                            android:src="@drawable/add"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintStart_toStartOf="parent" />
 
-</androidx.coordinatorlayout.widget.CoordinatorLayout>
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
+        </androidx.coordinatorlayout.widget.CoordinatorLayout>
+</layout>
