--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -1,77 +1,86 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".view.DetailFragment">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <data>
+
+    </data>
+
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent"
+        tools:context=".view.DetailFragment">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
 
+            <View
+                android:id="@+id/view_margin"
+                android:layout_width="match_parent"
+                android:layout_height="90dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
-    <View
-        android:id="@+id/view_margin"
-        android:layout_width="match_parent"
-        android:layout_height="90dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+            <TextView
+                android:id="@+id/txv_en"
+                android:text="@string/english"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/view_margin"
+                style="@style/txv_home_style" />
 
-    <TextView
-        android:id="@+id/txv_en"
-        android:text="@string/english"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/view_margin"
-        style="@style/txv_home_style" />
-    <TextView
-        android:id="@+id/txv_fa"
-        android:text="@string/persian"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/txv_en"
-        style="@style/txv_home_style" />
-    <TextView
-        android:id="@+id/txv_synonyms"
-        android:text="@string/synonyms"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/txv_fa"
-        style="@style/txv_home_style" />
-    <TextView
-        android:id="@+id/txv_example"
-        android:text="@string/example"
-        android:verticalScrollbarPosition="defaultPosition"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/txv_synonyms"
-        style="@style/txv_home_style" />
+            <TextView
+                android:id="@+id/txv_fa"
+                android:text="@string/persian"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/txv_en"
+                style="@style/txv_home_style" />
 
-    <Button
-        android:id="@+id/btn_edit_word"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="@string/edit"
-        android:layout_margin="20dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/btn_delete_word"
-        app:layout_constraintTop_toBottomOf="@+id/txv_example" />
+            <TextView
+                android:id="@+id/txv_synonyms"
+                android:text="@string/synonyms"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/txv_fa"
+                style="@style/txv_home_style" />
 
-    <Button
-        android:id="@+id/btn_delete_word"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="@string/delete"
-        android:layout_margin="20dp"
-        app:layout_constraintEnd_toStartOf="@+id/btn_edit_word"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txv_example"
-        style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>
+            <TextView
+                android:id="@+id/txv_example"
+                android:text="@string/example"
+                android:verticalScrollbarPosition="defaultPosition"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/txv_synonyms"
+                style="@style/txv_home_style" />
+
+            <Button
+                android:id="@+id/btn_edit_word"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="@string/edit"
+                android:layout_margin="20dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@id/btn_delete_word"
+                app:layout_constraintTop_toBottomOf="@+id/txv_example" />
+
+            <Button
+                android:id="@+id/btn_delete_word"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="@string/delete"
+                android:layout_margin="20dp"
+                app:layout_constraintEnd_toStartOf="@+id/btn_edit_word"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/txv_example"
+                style="@style/Widget.MaterialComponents.Button.OutlinedButton" />
 
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
 
-</ScrollView>
+    </ScrollView>
+</layout>
