--- a/app/src/main/res/layout/word_item_row.xml
+++ b/app/src/main/res/layout/word_item_row.xml
@@ -1,83 +1,90 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_margin="10dp">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <TextView
-        android:id="@+id/txv_en_row"
+    <data>
+
+    </data>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:minHeight="40dp"
-        android:maxLength="20"
-        tools:text = "@string/english"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        android:layout_margin="10dp">
 
-    <TextView
-        android:id="@+id/txv_fa_row"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:minHeight="40dp"
-        android:maxLength="20"
-        tools:text = "@string/persian"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/txv_en_row"/>
+        <TextView
+            android:id="@+id/txv_en_row"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:minHeight="40dp"
+            android:maxLength="20"
+            tools:text="@string/english"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/txv_more_row"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:minHeight="30dp"
-        android:maxLength="20"
-        android:text = "@string/detail"
-        android:gravity="center"
-        android:textSize="13sp"
-        android:padding="5dp"
-        android:layout_marginStart="8dp"
-        android:textColor="@color/blue_link"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/txv_fa_row"/>
+        <TextView
+            android:id="@+id/txv_fa_row"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:minHeight="40dp"
+            android:maxLength="20"
+            tools:text="@string/persian"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/txv_en_row" />
 
-    <ImageView
-        android:id="@+id/imv_link"
-        android:layout_width="20dp"
-        android:layout_height="20dp"
-        android:src="@drawable/ic_baseline_language_24"
-        android:layout_marginStart="10dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/txv_more_row"
-        app:layout_constraintTop_toBottomOf="@+id/txv_fa_row" />
+        <TextView
+            android:id="@+id/txv_more_row"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:minHeight="30dp"
+            android:maxLength="20"
+            android:text="@string/detail"
+            android:gravity="center"
+            android:textSize="13sp"
+            android:padding="5dp"
+            android:layout_marginStart="8dp"
+            android:textColor="@color/blue_link"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/txv_fa_row" />
 
-    <ImageView
-        android:id="@+id/imv_star"
-        android:layout_width="20dp"
-        android:layout_height="20dp"
-        android:src="@drawable/ic_baseline_star_outline_24"
-        android:layout_marginStart="10dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/imv_link"
-        app:layout_constraintTop_toBottomOf="@+id/txv_fa_row" />
+        <ImageView
+            android:id="@+id/imv_link"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:src="@drawable/ic_baseline_language_24"
+            android:layout_marginStart="10dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/txv_more_row"
+            app:layout_constraintTop_toBottomOf="@+id/txv_fa_row" />
 
-    <ImageView
-        android:id="@+id/imv_play"
-        android:layout_width="20dp"
-        android:layout_height="20dp"
-        android:src="@drawable/ic_baseline_play_arrow_24"
-        android:layout_marginStart="10dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/imv_star"
-        app:layout_constraintTop_toBottomOf="@+id/txv_fa_row" />
+        <ImageView
+            android:id="@+id/imv_star"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:src="@drawable/ic_baseline_star_outline_24"
+            android:layout_marginStart="10dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/imv_link"
+            app:layout_constraintTop_toBottomOf="@+id/txv_fa_row" />
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/txv_more_row"
-        android:background="@color/black"
-        android:alpha="0.3"/>
+        <ImageView
+            android:id="@+id/imv_play"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:src="@drawable/ic_baseline_play_arrow_24"
+            android:layout_marginStart="10dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/imv_star"
+            app:layout_constraintTop_toBottomOf="@+id/txv_fa_row" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/txv_more_row"
+            android:background="@color/black"
+            android:alpha="0.3" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
