--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -11,6 +11,9 @@
         <variable
             name="id"
             type="Integer" />
+        <variable
+            name="word"
+            type="com.example.dictionary.database.Word" />
 
     </data>
 
@@ -33,7 +36,7 @@
 
             <TextView
                 android:id="@+id/txv_en"
-                android:text="@{viewModel.getWord(id).en}"
+                android:text="@{word.en}"
                 tools:text="@string/english"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -43,7 +46,7 @@
             <TextView
                 android:id="@+id/txv_fa"
                 tools:text="@string/persian"
-                android:text="@{viewModel.getWord(id).fa}"
+                android:text="@{word.fa}"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/txv_en"
@@ -52,7 +55,7 @@
             <TextView
                 android:id="@+id/txv_synonyms"
                 tools:text="@string/synonyms"
-                android:text="@{viewModel.getWord(id).synonyms}"
+                android:text="@{word.synonyms}"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/txv_fa"
@@ -61,7 +64,7 @@
             <TextView
                 android:id="@+id/txv_example"
                 tools:text="@string/example"
-                android:text="@{viewModel.getWord(id).example}"
+                android:text="@{word.example}"
                 android:verticalScrollbarPosition="defaultPosition"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
