--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,12 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
+    <color name="_purple_200">#FFBB86FC</color>
+    <color name="_purple_500">#FF6200EE</color>
+    <color name="_purple_700">#FF3700B3</color>
+    <color name="_teal_200">#FF03DAC5</color>
+    <color name="_teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="blue_link">#34B9C5</color>
     <color name="golden">#FFEB3B</color>
+
+    <color name="purple_200">#3BACB6</color>
+    <color name="purple_500">#2F8F9D</color>
+    <color name="purple_700">#26717C</color>
+    <color name="teal_200">#82DBD8</color>
+    <color name="teal_700">#B3E8E5</color>
 </resources>
